<resources>
    <string name="app_name">Sign Up sample 1</string>
    <string name="title">Sign Up</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="have_account">Already have an account?</string>
    <string name="login">Login</string>
</resources>